--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -141,6 +141,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".67"
+                    android:onClick="clearButtonPressed"
                     android:text="CLEAR" />
 
             </LinearLayout>
@@ -186,7 +187,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="72dp"
                     android:layout_weight="1"
+                    android:onClick="diceButtonPressed"
                     android:scaleType="fitCenter"
+                    android:tag="D4"
                     app:srcCompat="@drawable/d4" />
 
                 <ImageButton
@@ -195,7 +198,9 @@
                     android:layout_height="72dp"
                     android:layout_weight="1"
                     android:background="@drawable/d6"
+                    android:onClick="diceButtonPressed"
                     android:scaleType="fitCenter"
+                    android:tag="D6"
                     app:srcCompat="@drawable/d6" />
             </LinearLayout>
 
@@ -209,7 +214,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="72dp"
                     android:layout_weight="1"
+                    android:onClick="diceButtonPressed"
                     android:scaleType="fitCenter"
+                    android:tag="D8"
                     app:srcCompat="@drawable/d8" />
 
                 <ImageButton
@@ -217,7 +224,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="72dp"
                     android:layout_weight="1"
+                    android:onClick="diceButtonPressed"
                     android:scaleType="fitCenter"
+                    android:tag="D10"
                     app:srcCompat="@drawable/d10" />
             </LinearLayout>
 
@@ -231,7 +240,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="72dp"
                     android:layout_weight="1"
+                    android:onClick="diceButtonPressed"
                     android:scaleType="fitCenter"
+                    android:tag="D12"
                     app:srcCompat="@drawable/d12" />
 
                 <ImageButton
@@ -239,7 +250,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="72dp"
                     android:layout_weight="1"
+                    android:onClick="diceButtonPressed"
                     android:scaleType="fitCenter"
+                    android:tag="D20"
                     app:srcCompat="@drawable/d20" />
             </LinearLayout>
         </LinearLayout>
@@ -255,6 +268,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="onRollButtonPressed"
             android:text="Roll" />
 
         <Button
