--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,21 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/rollsTV"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="2 + 5 +4 + 2"
-        android:textColor="@android:color/holo_orange_light"
-        android:textSize="18sp" />
+        android:layout_height="100dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/rollsTV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:id="@+id/totalTV"
@@ -278,4 +286,9 @@
             android:layout_weight="1"
             android:text="Percentile" />
     </LinearLayout>
+
+    <ListView
+        android:id="@+id/rollsLV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
